# blockchain-A2-q2

./: .gitignore  CMakeLists.txt  main.cpp  ui.cpp  ui.h
src/blockchain/: block.cpp  block.h  blockchain.h  transaction.h
src/nft/: nft.cpp  nft.h  nft_controller.cpp  nft_controller.h
src/user/: user.h
